[tool.poetry]
name = "project-pyspark"
version = "0.1.0"
description = ""
authors = ["Bruno Augusto <120321738+imbrunoagc@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.2.4"


[tool.poetry.group.dev.dependencies]
pyspark = "^3.5.2"
findspark = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
